# hadamer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tupfile
src/: buffer.c  buffer.luc  buffer.luh  config.lua  config.luh  genutils.lua  refplan.h  refplan.luc  tree.luc  tree.luh  util.h  vector.c  vector.h
test/2d/: config.lua  functions.h  main.c
test/3d/: config.lua  functions.h  main.c
